Update tag headings to prevent background overlapping
Tested on Firefox and Chromium on the same Linux computer.

--- a/assets/main.css
+++ b/assets/main.css
@@ -63,8 +63,8 @@ menu > li {
 
 /* Colored tags header */
 h1 > code {
-	padding: .06em .2em;
-	line-height: 1.3em;
+	padding: .05em .2em;
+	line-height: 1.4em;
 	background-color: var(--bg-color)
 }
 
